# AlexGames

./: .dockerignore  .gitignore  BUILD.md  LICENSE.md  README.md  TODO.md  alexgames_wasm.data  alexgames_wasm.js  alexgames_wasm.wasm  clean.sh  config.toml  docker-compose.yml  local_env.cmake
src/: CMakeLists.txt  alexgames_config.h.in
src/android/: README.md  adb_copy_files.sh  build.gradle  cp_games_assets.sh  settings.gradle
src/android/app/: build.gradle
src/android/gradle/wrapper/: gradle-wrapper.properties
src/cpp_libs/button_helper/: button_helper.cpp  button_helper.h
src/cpp_libs/game_api_helper/: game_api_helper.cpp  game_api_helper.h
src/cpp_libs/history_browse_ui/: history_browse_ui.cpp  history_browse_ui.h
src/cpp_libs/mouse_scroll_handler/: mouse_scroll_handler.cpp  mouse_scroll_handler.h
src/cpp_libs/saved_state_db/: README.md  saved_state_db.cpp  saved_state_db.h  saved_state_db_c_api.cpp  saved_state_db_c_api.h
src/cpp_libs/sqlite_saved_state/: CMakeLists.txt  README.md  sqlite_saved_state.c  sqlite_saved_state.h
src/cpp_libs/touch_press_handler/: touch_press_handler.cpp  touch_press_handler.h
src/cpp_libs/touch_scroll_handler/: touch_scroll_handler.cpp  touch_scroll_handler.h
src/cpp_libs/utils/: str_eq_literal.h  utf8.c  varint.c  varint.h
src/dictionary/: CMakeLists.txt  build_word_list_w_freq.py  c_dictionary.c  c_dictionary.h  dict_utils.py  dictionary.c  dictionary.h
src/dictionary/wip/: vulgar_or_weird_words.txt  words_to_remove.txt
src/emscripten/: emscripten_api.c  emscripten_c_dict_api.c  emscripten_dict_api.c  emscripten_dict_api.h
src/game_api/: game_api.c  game_api.h  game_api_ai.h  game_api_utils.c  game_api_utils.h  game_api_words.c  game_api_words.h
src/html/: cache.manifest  game_api_doc.html  index.html  licenses.html
src/html/css/: style.css  style_collapsable.css
src/html/js/: alexgames.js  alexgames_colour_pref.js  alexgames_editor.js  alexgames_wasm_api.js  alexgames_wasm_wrapper.js  alexgames_ws.js  main.js
src/html/partials/: translations.html
src/lua_api/: lua_api.c  lua_api.h  lua_api_ai.c  lua_api_ai.h  lua_api_dict.c  lua_api_dict.h  lua_api_utils.c  lua_api_utils.h  lua_user_cfg.h
src/lua_scripts/games/31s/: 31s_core.lua  31s_draw.lua  31s_main.lua
src/lua_scripts/games/api_demo/: game.lua  game_core.lua  game_draw.lua
src/lua_scripts/games/backgammon/: backgammon_core.lua  backgammon_draw.lua  backgammon_main.lua  backgammon_serialize.lua
src/lua_scripts/games/blue/: blue_core.lua  blue_draw.lua  blue_main.lua  blue_ui.lua
src/lua_scripts/games/bound/: bound_core.lua  bound_draw.lua  bound_main.lua  bound_serialize.lua
src/lua_scripts/games/card_sim/: card_generic_core.lua  card_generic_draw.lua  card_generic_main.lua  card_generic_serialize.lua
src/lua_scripts/games/checkers/: checkers_core.lua  checkers_draw.lua  checkers_main.lua  checkers_serialize.lua
src/lua_scripts/games/chess/: chess_core.lua  chess_draw.lua  chess_main.lua  chess_serialize.lua  chess_strings.lua
src/lua_scripts/games/crib/: crib_core.lua  crib_draw.lua  crib_main.lua  crib_serialize.lua  crib_test.lua
src/lua_scripts/games/crossword_builder/: crossword_builder_core.lua  crossword_builder_draw.lua  crossword_builder_main.lua
src/lua_scripts/games/crossword_letters/: crossword_letters_core.lua  crossword_letters_draw.lua  crossword_letters_gen_puzzles.lua  crossword_letters_main.lua  crossword_letters_puzzles.lua  crossword_letters_serialize.lua  gen_crossword_letters.py  gen_crossword_letters2.py  list_puzzle_words.lua  list_right_diffs.py
src/lua_scripts/games/endless_runner/: endless_runner_core.lua  endless_runner_draw.lua  endless_runner_main.lua
src/lua_scripts/games/fluid_mix/: fluid_mix_core.lua  fluid_mix_draw.lua  fluid_mix_main.lua  fluid_mix_serialize.lua
src/lua_scripts/games/go/: go_core.lua  go_ctrl.lua  go_main.lua  go_ui.lua
src/lua_scripts/games/hospital/: hospital_core.lua  hospital_draw.lua  hospital_main.lua  hospital_serialize.lua
src/lua_scripts/games/life/: life_core.lua  life_draw.lua  life_main.lua
src/lua_scripts/games/minesweeper/: minesweeper_core.lua  minesweeper_draw.lua  minesweeper_main.lua  minesweeper_serialize.lua
src/lua_scripts/games/minesweeper_life/: minesweeper_draw.lua  minesweeper_life_core.lua  minesweeper_life_main.lua  minesweeper_serialize.lua
src/lua_scripts/games/poker_chips/: poker_chips_core.lua  poker_chips_main.lua  (+2 more)
src/lua_scripts/libs/: combinations.lua  letter_tiles.lua  shuffle.lua  touch_to_mouse_evts.lua  translation_strings.lua  utils.lua  words.lua
src/misc/: generate_apple_icons.py
src/rust_games/: Cargo.toml  README.md  config.toml  rust_game_api.c  rust_game_api.h  rust_game_api.rs  rust_game_handler.rs
src/rust_games/free_cell/: free_cell_core.rs  free_cell_draw.rs  free_cell_main.rs  free_cell_serialize.rs  mod.rs
src/rust_games/gem_match/: gem_match_core.rs  gem_match_draw.rs  gem_match_main.rs  gem_match_serialize.rs  mod.rs
src/rust_games/libs/: bitpack.rs  cards.rs  draw.rs  mod.rs  point.rs  swipe_tracker.rs
src/rust_games/morse/: mod.rs  morse_core.rs  morse_draw.rs  morse_main.rs
src/rust_games/reversi/: mod.rs  reversi_core.rs  reversi_draw.rs  reversi_main.rs  reversi_serialize.rs
src/rust_games/table_tennis/: mod.rs  table_tennis_core.rs  table_tennis_draw.rs  table_tennis_main.rs
src/rust_games/trivia/: mod.rs  trivia_main.rs
src/server/socket/: socket_server.h  socket_server_impl.c
src/server/ws/: requirements.txt  ws_server.py
src/ui_wxWidgets/: wx_game_popup.cpp  wx_game_popup.h  wx_main.cpp  wx_network.cpp  wx_network.h  wx_network_ui.cpp  wx_network_ui.h
tests/: CMakeLists.txt
tests/checkers/: checkers_test.lua
tests/chess/: chess_castling_test.lua  chess_test.lua
tests/crib/: crib_test.lua
tests/go/: go_tests.lua
tests/saved_state/: CMakeLists.txt  test.sh  test_saved_state_db.cpp
tests/solitaire/: solitaire_draw_three_test.lua  solitaire_solve_test.lua
tests/tetris/: tetris_test.lua
tests/utils/: test_utf8_decode.cpp  test_varint.cpp
tests/wu/: test_wu.lua
(+163 files in other folders)
