[package]
name = "rust_games"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
#web-sys = { version = "0.3.69", features = ["console"] }
#wasm-bindgen = "0.2"

#[dependencies.web-sys]
#version = "0.3"
#features = [ "console" ]



[lib]
name = "alexgames_rust"
path = "rust_game_handler.rs"
#crate-type = ["cdylib"]
#crate-type = ["staticlib"]
#crate-type = ["staticlib", "cdylib"]
crate-type = ["staticlib"]
