[package]
name = "rust_games"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4"
static_assertions = "1.1.0"
#bitpacking = "0.9.2"

[lib]
name = "alexgames_rust"
path = "rust_game_handler.rs"
crate-type = ["staticlib"]
